# FireNIce

./: .gitignore  .travis.yml  CMakeLists.txt  FireNIce.cbp  LICENSE  README.md  main.cpp
doc/: Doxyfile
doc/html/: Animation_8h_source.html  Client_8h_source.html  GameState_8h_source.html  LevelMenu_8h_source.html  MainMenu_8h_source.html  ObjMan_8h_source.html  Platform_8h_source.html  Player_8h_source.html  Server_8h_source.html  Splash_8h_source.html  VisibleGameObject_8h_source.html  annotated.html  classAnimation.html  classClient.html  classGame.html  classGameState.html  classLevelMenu.html  classMainMenu.html  classObjMan.html  classPlatform.html  classPlayer.html  classServer.html  classSplash.html  classVisibleGameObject.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  structObjMan_1_1GameObjDealloc.html
doc/latex/: annotated.tex  classAnimation.tex  classClient.tex  classGame.tex  classGameState.tex  classLevelMenu.tex  classMainMenu.tex  classObjMan.tex  classPlatform.eps  classPlatform.tex  classPlayer.eps  classPlayer.tex  classServer.tex  classSplash.tex  classVisibleGameObject.eps  classVisibleGameObject.tex  hierarchy.tex  refman.tex  structObjMan_1_1GameObjDealloc.tex
include/: Animation.h  Client.h  Collision.h  GameState.h  LevelMenu.h  MainMenu.h  ObjMan.h  Object.h  Platform.h  Player.h  Server.h  Splash.h  VisibleGameObject.h  player.h
res/: Level1.txt  Level2.txt
src/: Animation.cpp  Client.cpp  Collision.cpp  GameState.cpp  LevelMenu.cpp  MainMenu.cpp  ObjMan.cpp  Object.cpp.cpp  Platform.cpp  Player.cpp  Server.cpp  Splash.cpp  VisibleGameObject.cpp  player.cpp
trial/: trial.cpp  trial.h
